--- a/resources/views/comments/edit.edge
+++ b/resources/views/comments/edit.edge
@@ -9,9 +9,8 @@
           {{ flashMessage('error') }}
         </div>
       @endif
-      <h1>Edit a comment</h1>
-      {{--  <h3>{{post.title}}</h3>  --}}
-      <form action="{{route('comment.update', { postSecureId: post.secureId, commentId: comment.id })}}?_method=put" method="post">
+      <h3>Edit a comment</h3>
+      <form action="{{route('comment.update', { postSecureId: post.secureId, commentSecureId: comment.secureId })}}?_method=put" method="post">
         {{ csrfField() }}
         <input type="password" name="password" class="form-control mb-1" placeholder="Password" minlength="16" maxlength="100" required>
         <textarea name="content" rows="3" class="form-control mb-2" placeholder="Put your comment" minlength="1" maxlength="3000" required>{{comment.content}}</textarea>
