--- a/resources/views/posts/view.edge
+++ b/resources/views/posts/view.edge
@@ -26,7 +26,7 @@
         </div>
       </div>
       <hr>
-      <form class="mb-4" action="{{route('comment.store', {postSecureId:post.secureId})}}" method="post">
+      <form class="mb-4" action="{{route('comment.store', { postSecureId:post.secureId })}}" method="post">
         {{ csrfField() }}
         <textarea name="content" rows="2" class="form-control mb-1" placeholder="Put your comment" minlength="1" maxlength="3000" required></textarea>
         <div class="input-group">
@@ -56,8 +56,8 @@
                 <li class="list-inline-item">Created {{ago(comment.created_at)}}</li>
                 <li class="list-inline-item">Updated {{ago(comment.updated_at)}}</li>
                 <li class="list-inline-item">
-                  <a href="{{route('comment.edit', { postSecureId: post.secureId, commentId: comment.id })}}" class="btn btn-primary btn-smaller">Edit</a>
-                  <a href="{{route('comment.delete', { postSecureId: post.secureId, commentId: comment.id })}}" class="btn btn-danger btn-smaller">Delete</a>
+                  <a href="{{route('comment.edit', { postSecureId: post.secureId, commentSecureId: comment.secureId })}}" class="btn btn-primary btn-smaller">Edit</a>
+                  <a href="{{route('comment.delete', { postSecureId: post.secureId, commentSecureId: comment.secureId })}}" class="btn btn-danger btn-smaller">Delete</a>
                 </li>
               </ul>
               <div class="markdown-body mt-1">
